# TLA-RV

./: .gitignore  ExampleSpec.tla  Harness.tla  example.rfnmnt  example.trace  get_rfnment_vars.sh  modelcheck.sh  traces_to_spec.py
critical-section-example/: CMakeLists.txt  critical_section.cpp  critical_section.tla  run.sh
gcd-example/: .gitignore  GCD.c  GCD.tla  Harness.tla  gdb-instrumentation  run.sh
gdb-instrument/: run.sh
llvm-instrument/: LICENSE  attach_cmake_proj.sh
llvm-instrument/example/: CMakeLists.txt  example.cpp
llvm-instrument/llvm-pass/: CMakeLists.txt  llvm-pass.cpp
llvm-instrument/rtlib/: CMakeLists.txt  logger.cpp
